# PothosZynq

./: .gitignore  CMakeLists.txt  README.md
blocks/: TestZynqDMALoopback.cpp  ZynqBufferManager.cpp  ZynqDMASink.cpp  ZynqDMASource.cpp  ZynqDMASupport.hpp
debian/: control  postinst  prerm
driver/: Makefile  loopback_test.c  pothos_zynq_dma_driver.h
kernel/: .gitignore  Makefile  README.md  pothos_zynq_dma_alloc.c  pothos_zynq_dma_common.h  pothos_zynq_dma_fops.c  pothos_zynq_dma_irq.c  pothos_zynq_dma_module.c  pothos_zynq_dma_module.h  pothos_zynq_dma_probe.c  userspace_test.c
loopback_microzed/boot/: design_1_wrapper.bit  system.dts
loopback_microzed/vivado/demo/: demo.xpr
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/: design_1.bd  design_1.bxml
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/hdl/: design_1.vhd  design_1_wrapper.vhd
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/hw_handoff/: design_1.hwh  design_1_bd.tcl
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/ip/design_1_auto_pc_0/: design_1_auto_pc_0.xci  design_1_auto_pc_0.xml
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/ip/design_1_auto_pc_1/: design_1_auto_pc_1.xci  design_1_auto_pc_1.xml
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/ip/design_1_auto_us_0/: design_1_auto_us_0.xci  design_1_auto_us_0.xml
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/ip/design_1_auto_us_1/: design_1_auto_us_1.xci  design_1_auto_us_1.xml
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/ip/design_1_auto_us_2/: design_1_auto_us_2.xci  design_1_auto_us_2.xml  design_1_auto_us_2_clocks.xdc
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/ip/design_1_axi_dma_0_1/: design_1_axi_dma_0_1.xci  design_1_axi_dma_0_1.xml  design_1_axi_dma_0_1_clocks.xdc
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/ip/design_1_axi_mem_intercon_0/: design_1_axi_mem_intercon_0.xci  design_1_axi_mem_intercon_0.xml
loopback_microzed/vivado/demo/demo.srcs/sources_1/bd/design_1/ui/: bd_1f5defd0.ui
(+55 files in other folders)
